--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>Finance Data</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 	<div class="wrapper">
 		<h1>Hello, world!</h1>
 	</div>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+	<script src="content/components/jquery/dist/jquery.min.js"></script>
+	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="content/components/angular/angular.min.js"></script>
 </body>
 </html>
