--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<title>Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body ng-controller="FinanceController">
 	<div class="wrapper">
 		<h1>Hello, world!</h1>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="content/components/angular/angular.min.js"></script>
+	<script src="content/js/main.js"></script>
 </body>
 </html>
