--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
 	<title>Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
