--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="content/components/angular/angular.min.js"></script>
 	<script src="content/js/main.js"></script>
+	<script src="content/js/controllers.js"></script>
 </body>
 </html>
