--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body ng-controller="FinanceController">
 	<div class="wrapper">
-		<h1>Hello, world!</h1>
+		<h1>{{ title }}</h1>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
