--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body ng-controller="FinanceController">
 	<div class="wrapper">
 		<h1>{{ title }}</h1>
+		<p>Total: {{ stocks.length }}
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
