adding search field

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div class="wrapper">
 		<h1>{{ title }}</h1>
 		<p>Total: {{ stocks.length }}. Search: <input ng-model="query"></p>
-		<ul ng-repeat="stock in stocks">
+		<ul ng-repeat="stock in stocks | filter:query">
 			<li>{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
 		</ul>
 	</div>
