--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div class="wrapper">
 		<h1>{{ title }}</h1>
 		<p>
-		   	Search: <input ng-model="query"> <br>
+		   	Search: <input ng-model="query">
 			Total: {{ stocks.length }}
 		</p>
 		<ul ng-repeat="stock in stocks | filter:query">
