--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		   	Search: <input ng-model="query">
 			Total: {{ stocks.length }}
 		</p>
-		<ul ng-repeat="stock in stocks | filter:query">
-			<li>{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
+		<ul>
+			<li ng-repeat="stock in stocks | filter:query">{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
 		</ul>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
