--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="FinanceApp">
 <head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
 </head>
