--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="FinanceApp">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title ng-bind-template="{{ query }}">Finance Data</title>
+	<title ng-bind-template="Finance App: {{ query }}">Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body ng-controller="FinanceController">
