--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<h1>{{ title }}</h1>
 		<p>
 		   	Search: <input ng-model="query">
-			Total: {{ stocks.length }}
 		</p>
+			Found: {{ stocks.length }}
 		<ul>
-			<li ng-repeat="stock in stocks | filter:query">{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
+			<li ng-repeat="stock in stocks = ( data| filter:query )">{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
 		</ul>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
