--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<div class="wrapper">
 		<h1>{{ title }}</h1>
 		<p>
-		   	Search: <input ng-model="query">
+		   	Search: 
+		   	<input ng-model="query">
+		   	
+		   	Order by: 
 		   	<select ng-model="orderProp">
   				<option value="company">Company</option>
   				<option value="stock">Stock name</option>
