--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</p>
 			Found: {{ filtered.length }}
 		<ul>
-			<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">{{ stock.company }} - {{ stock.name }} - {{ stock.value }}</li>
+			<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">{{ stock.company }} - {{ stock.name }} - {{ stock.value \ currency }}</li>
 		</ul>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
