--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="FinanceApp">
+<html ng-app="financeApp">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title ng-bind-template="Finance App: {{ query }}">Finance Data</title>
@@ -28,6 +28,11 @@
 				</p>
 			</li>
 		</ul>
+		<div class="data">
+			<pre>
+				{{ stocks | json }}
+			</pre>
+		</div>
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
