--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 			Found: {{ filtered.length }}
 		<ul>
 			<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">
-				<img ng-src="content/img/{{ stock.image }}" width="50px" height="50px">
+				<a href="#/stocks/{{ stock.id }}" class="thumb">
+					<img ng-src="content/img/{{ stock.image }}" width="50px" height="50px">
+				</a>
 				<p>
 					{{ stock.company }} - {{ stock.name }} - {{ stock.value | currency }}
 				</p>
