--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="content/components/angular/angular.min.js"></script>
+	<script src="content/components/angular-route/angular-route.min.js"></script>
 	<script src="content/js/main.js"></script>
 	<script src="content/js/controllers.js"></script>
 </body>
