--- a/index.html
+++ b/index.html
@@ -5,42 +5,15 @@
 	<title ng-bind-template="Finance App: {{ query }}">Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body ng-controller="FinanceController">
+<body ng-view>
 	<div class="wrapper">
-		<h1>{{ title }}</h1>
-		<p>
-		   	Search: 
-		   	<input ng-model="query">
-		   	
-		   	Order by: 
-		   	<select ng-model="orderProp">
-  				<option value="company">Company</option>
-  				<option value="stock">Stock name</option>
-  				<option value="value">Value</option>
-			</select>
-		</p>
-			Found: {{ filtered.length }}
-		<ul>
-			<li ng-repeat="stock in filtered = ( stocks | filter:query | orderBy:orderProp )">
-				<a href="#/stocks/{{ stock.id }}" class="thumb">
-					<img ng-src="content/img/{{ stock.image }}" width="50px" height="50px">
-				</a>
-				<p>
-					{{ stock.company }} - {{ stock.name }} - {{ stock.value | currency }}
-				</p>
-			</li>
-		</ul>
-		<div class="data">
-			<pre>
-				{{ stocks | filter:query | orderBy:orderProp | json }}
-			</pre>
-		</div>
+		
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="content/components/angular/angular.min.js"></script>
 	<script src="content/components/angular-route/angular-route.min.js"></script>
-	<script src="content/js/main.js"></script>
+	<script src="content/js/app.js"></script>
 	<script src="content/js/controllers.js"></script>
 </body>
 </html>
