--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body ng-view>
 	<div class="wrapper">
+		<h1>{{ title }}</h1>
+
 		
 	</div>
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
