--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title ng-bind-template="Finance App: {{ query }}">Finance Data</title>
 	<link rel="stylesheet" href="content/components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="content/css/style.css">
 	<script src="content/components/jquery/dist/jquery.min.js"></script>
 	<script src="content/components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="content/components/angular/angular.min.js"></script>
